Bug 346456 - When screen turn off automatically, it will turn black twice.
Summary: When screen turn off automatically, it will turn black twice.
Status: RESOLVED FIXED
Alias: None
Product: Powerdevil
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 5.2.95
Platform: Chakra Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Development Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-22 04:52 UTC by Weng Xuetian
Modified: 2015-09-12 01:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.4.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Weng Xuetian 2015-04-22 04:52:25 UTC
When set screen off automatically, the screen will turn black first, then turn on quickly and then turn black again. My graphic card is intel.
I suspect this is caused by the new feature of powerdevil invoking kwin effect.

Reproducible: Sometimes
Comment 1 Kai Uwe Broulik 2015-04-23 21:07:20 UTC
The effect kicks in 5 seconds before turning off the screen but will automatically end after 8 seconds to prevent blocking the workspace. Perhaps your screen takes longer to suspend and the effect quits prior to that.
Comment 2 Weng Xuetian 2015-08-27 16:12:58 UTC
Emm, I don't know. I also noticed that this also happens when I use keyboard to decreaes the brightness to zero, as shown in the video: http://youtu.be/9vdwxsO_zW8
Comment 3 Weng Xuetian 2015-09-12 01:29:57 UTC
Git commit 1005dd9a25c5fafea1f781c6d2a49fe99e219a34 by Weng Xuetian.
Committed on 12/09/2015 at 01:28.
Pushed by xuetianweng into branch 'Plasma/5.4'.

Fix the brightness update

1. Update to m_cachedBrightnessMap is ignored during the animation. This
change queries the real brightness after animation is finished.
2. setting start/endvalue will also trigger the valueChanged in
QPropertyAnimation, disconnect the slot on valueChanged after stop() and
reconnect it before start().
Related: bug 350676
REVIEW: 125156
FIXED-IN: 5.4.2

M  +3    -0    daemon/backends/upower/powerdevilupowerbackend.cpp

http://commits.kde.org/powerdevil/1005dd9a25c5fafea1f781c6d2a49fe99e219a34