Fix the brightness update

1. Update to m_cachedBrightnessMap is ignored during the animation. This
change queries the real brightness after animation is finished.
2. setting start/endvalue will also trigger the valueChanged in
QPropertyAnimation, disconnect the slot on valueChanged after stop() and
reconnect it before start().

BUG: 346456
BUG: 350676
REVIEW: 125156
FIXED-IN: 5.4.2